# Claude_4K4D

./: .gitignore  LICENSE  README.md  __init__.py  comfyui_nodes.json  install.py  node_mappings.py  pyproject.toml  requirements.txt
configs/templates/: dataset.yaml.j2  dataset_obj.yaml.j2  experiment.yaml.j2  experiment_bg.yaml.j2  experiment_fg.yaml.j2
core/: __init__.py  base_node.py  checkpoint_manager.py  config_generator.py  constants.py  cuda_builder.py  dataset_structure.py  env_manager.py  format_detector.py  model_downloader.py  quality_checker.py  subprocess_runner.py  sync_aligner.py
docs/: CAMERA_RIG_GUIDE.md  INSTALL.md  NLE_EXPORT_GUIDE.md  NODES_REFERENCE.md  PIPELINE_EXPLAINED.md  RUNPOD_GUIDE.md  TROUBLESHOOT.md
nodes/: n01_folder_ingest.py  n02_dependency_install.py  n03_frame_extract.py  n04_camera_calibration.py  n05_mask_generation.py  n06_visual_hull.py  n06b_quality_gate.py  n07_train.py  n08_supercharge.py  n09_render.py  n10_viewer.py  n11_status_monitor.py  n12_export_pack.py  n13_version_manager.py  n14_cleanup.py
tests/: __init__.py  conftest.py  test_base_node.py  test_config_generator.py  test_env_manager.py  test_format_detector.py  test_quality_checker.py  test_subprocess_runner.py
web/css/: viewer.css
web/js/: 1_OrbitControls.js  2_PLYLoader.js  OrbitControls.js  PLYLoader.js  fourk4d_viewer.js  statusMonitor.js  three.min.js
workflows/: 01_quick_test.json  02_calibration_test.json  03_masking_test.json  04_training_preview.json  05_full_pipeline.json  06_inference_only.json
